bonus/confs/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
spec:
  rules:
  - host: app.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-www
            port:
              number: 80
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: app-ingress
#  namespace: gitlab
#spec:
#  rules:
#  - host: gitlab.local
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: gitlab-webservice-default
#            port:
#              number: 8181
